--- a/index.html
+++ b/index.html
@@ -7,7 +7,16 @@
     <link rel="stylesheet" href="script.js">
 </head>
 <body>
+
+    <input type="number" id = "num1" placeholder="..."></input>
+    <input type="number" id = "num2" placeholder="..."></input>
+    <button id = "MinusBtn">-</button>
+    <p id ="Answer">...</p>
+
     
 </body>
 <script src="script.js"></script>
+<script src="function.js"></script>
+<script src="function2.js"></script>
+<script src="object.js"></script>
 </html>
